// Vitest Snapshot v1

exports[`List > List baseVue demo works fine 1`] = `
<t-list>
  <t-list-item>
     列表内容的描述性文字 
  </t-list-item>
  <t-list-item>
     列表内容的描述性文字 
  </t-list-item>
</t-list>
`;

exports[`List > List headerFooterVue demo works fine 1`] = `
<div>
  <t-list
    footer="这里是 Footer"
    header="这里是 Header"
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
  <div
    style="margin-bottom: 16px;"
  />
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List imageTextVue demo works fine 1`] = `
<div>
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
  <div
    style="margin-bottom: 16px;"
  />
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      >
        <template>
          <p>
            列表内容的描述性文字
          </p>
        </template>
      </t-list-item-meta>
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List loadingVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="load-more"
      >
        加载更多
      </t-radio-button>
      <t-radio-button
        value="loading"
      >
        加载中
      </t-radio-button>
      <t-radio-button
        value="loading-custom"
      >
        自定义加载更多
      </t-radio-button>
      <t-radio-button
        value=""
      >
        加载完成
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-list
    async-loading="load-more"
    split=""
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List multilineVue demo works fine 1`] = `
<div>
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容的描述性文字"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List operationVue demo works fine 1`] = `
<div>
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容列表内容"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容列表内容"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
  <div
    style="margin-bottom: 16px;"
  />
  <t-list
    split="true"
  >
    <t-list-item>
      <t-list-item-meta
        description="列表内容列表内容"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
    <t-list-item>
      <t-list-item-meta
        description="列表内容列表内容"
        image="https://tdesign.gtimg.com/site/avatar.jpg"
        title="列表标题"
      />
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List scrollVue demo works fine 1`] = `
<t-list
  onscroll="function () { [native code] }"
  style="max-height: 200px;"
>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
  <t-list-item>
    列表内容的描述性文字
  </t-list-item>
</t-list>
`;

exports[`List > List sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-list
    size="small"
    split="true"
  >
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
  </t-list>
  <t-list
    split="true"
  >
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
  </t-list>
  <t-list
    size="large"
    split="true"
  >
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
  </t-list>
</div>
`;

exports[`List > List stripeVue demo works fine 1`] = `
<div>
  <t-list
    stripe=""
  >
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
    <t-list-item>
      列表内容的描述性文字
    </t-list-item>
  </t-list>
</div>
`;
